cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_05495_make_RedMine_SGs.tmplt.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Template for creating Security groups used to support RedMine.",
  "Mappings": {},
  "Conditions": {},
  "Outputs": {
    "AppSg": {
      "Description": "Application-access Security Group to support RedMine",
      "Value": { "Ref": "AppSg" }
    },
    "NasSg": {
      "Description": "EC2-to-NAS Security Group to support RedMine",
      "Value": { "Ref": "NasSg" }
    },
    "RdsSg": {
      "Description": "EC2-to-RDS Security Group to support RedMine",
      "Value": { "Ref": "RdsSg" }
    }
  },
  "Parameters": {
    "TargetVPC": {
      "AllowedPattern": "^vpc-[0-9a-f]*$",
      "Description": "ID of the VPC to deploy RedMine components into.",
      "Type": "AWS::EC2::VPC::Id"
    }
  },
  "Resources": {
    "RdsSg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "EC2-to-RDS Security Group",
        "Tags": [ { "Key": "Name", "Value": "RedMine EC2/RDS Security Group" } ],
        "VpcId": { "Ref": "TargetVPC" }
      }
    },
    "UpdateRdsSg": {
      "DependsOn": "RdsSg",
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "Description": "Exceptions for MySQL over 3306/tcp",
        "GroupId": { "Ref": "RdsSg" },
        "SourceSecurityGroupId": { "Ref": "RdsSg" },
        "IpProtocol": "tcp",
        "FromPort": "3306",
        "ToPort": "3306"
      }
    },
    "NasSg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "EC2-to-Storage Security Group",
        "Tags": [ { "Key": "Name", "Value": "RedMine EC2/Storage Security Group" } ],
        "VpcId": { "Ref": "TargetVPC" }
      }
    },
    "UpdateNasSgRpcbindTcp": {
      "DependsOn": "NasSg",
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "Description": "Exceptions for rpcbind over TCP",
        "GroupId": { "Ref": "NasSg" },
        "SourceSecurityGroupId": { "Ref": "NasSg" },
        "IpProtocol": "tcp",
        "FromPort": "111",
        "ToPort": "111"
      }
    },
    "UpdateNasSgRpcbindUdp": {
      "DependsOn": "NasSg",
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "Description": "Exceptions for rpcbind over UDP",
        "GroupId": { "Ref": "NasSg" },
        "SourceSecurityGroupId": { "Ref": "NasSg" },
        "IpProtocol": "udp",
        "FromPort": "111",
        "ToPort": "111"
      }
    },
    "UpdateNasSgNfsdTcp": {
      "DependsOn": "NasSg",
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "Description": "Exceptions for nfsd over TCP",
        "GroupId": { "Ref": "NasSg" },
        "SourceSecurityGroupId": { "Ref": "NasSg" },
        "IpProtocol": "tcp",
        "FromPort": "2049",
        "ToPort": "2049"
      }
    },
    "UpdateNasSgNfsdUdp": {
      "DependsOn": "NasSg",
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "Description": "Exceptions for nfsd over UDP",
        "GroupId": { "Ref": "NasSg" },
        "SourceSecurityGroupId": { "Ref": "NasSg" },
        "IpProtocol": "udp",
        "FromPort": "2049",
        "ToPort": "2049"
      }
    },
    "AppSg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Application access-ports Security Group",
        "SecurityGroupIngress": [
          {
            "Description": "Allow unfettered HTTPS from public clients",
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [ { "Key": "Name", "Value": "RedMine application Security Group" } ],
        "VpcId": { "Ref": "TargetVPC" }
      }
    },
    "UpdateAppSg": {
      "DependsOn": "AppSg",
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "Description": "Allow unfettered HTTP between ELB and EC2",
        "GroupId": { "Ref": "AppSg" },
        "SourceSecurityGroupId": { "Ref": "AppSg" },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80"
      }
    }
  }
}
